sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var inverse=false
	for (i<-1 to getNombreValeurs()) {
		if (getValeur(i)>getValeur(i+1)) {
			echange(i,i+1)
			inverse=true	
		}
		while(inverse)
	} 
}
